# jim

./: .pre-commit-config.yaml  CONTRIBUTING.md  _zensical_build.toml  index.html  pyproject.toml  versions.json  zensical.toml
.github/workflows/: CI.yml  docs.yml  pre-commit-autoupdate.yml
docs/: FAQ.md  citing.md  contributing.md  gen_api.py  index.md  quickstart.md
docs/api/jimgw/: typing.md
docs/api/jimgw/core/: base.md  constants.md  jim.md  prior.md  transforms.md  utils.md
docs/api/jimgw/core/single_event/: data.md  detector.md  likelihood.md  marginalization_config.md  prior.md  (+6 more)
docs/api/jimgw/samplers/: base.md  config.md  flowmc.md  periodic.md
docs/guides/: cli.md  index.md  likelihood.md  samplers.md  transforms.md
docs/tutorials/: gw150914_cli.md  index.md
examples/: GW150914_NSS.py  GW150914_NS_AW.py  GW150914_SMC.py  GW150914_flowMC.py  GW170817.py  GW170817_heterodyne.py  GW170817_multiband.py  injection.py
examples/configs/: GW150914_flowmc.toml  injection_flowmc.toml
latest/: 404.html  gen_api.py  index.html  objects.inv  search.json  sitemap.xml
latest/FAQ/: index.html
latest/api/jimgw/typing/: index.html
latest/citing/: index.html
latest/contributing/: index.html
latest/dev/blackjax_followups/: index.html
latest/guides/: index.html
latest/guides/cli/: index.html
latest/guides/data/: index.html
latest/guides/likelihood/: index.html
latest/guides/prior/: index.html
latest/guides/samplers/: index.html
latest/guides/transforms/: index.html
latest/installation/: index.html
latest/javascripts/: mathjax.js
latest/quickstart/: index.html
latest/tutorials/: getting_started.ipynb  index.html
latest/tutorials/getting_started/: index.html
latest/tutorials/gw150914_cli/: index.html
src/jimgw/: __init__.py  jim.py  prior.py  typing.py
src/jimgw/cli/: __init__.py  _config.py  _data.py  _jim.py  _likelihood.py  _output.py  _params.py  _prior.py  _transforms.py  _waveform.py
src/jimgw/core/: base.py  jim.py  prior.py  transforms.py  utils.py
src/jimgw/core/single_event/: data.py  detector.py  likelihood.py  polarization.py  prior.py  time_utils.py  transform_utils.py  transforms.py  utils.py  waveform.py
src/jimgw/samplers/: __init__.py  base.py  config.py  flowmc.py  periodic.py
src/jimgw/samplers/blackjax/: _acceptance_walk_kernel.py  _imports.py  ns_aw.py  nss.py  smc.py
src/jimgw/single_event/: likelihood.py  utils.py
tests/configs/: GW150914_file.toml
tests/cross_validation/: test_likelihood.py
tests/integration/: _helpers.py  test_cli_run.py  test_sampler_nss.py  test_sampler_smc.py
tests/unit/cli/: test_config.py  test_transforms.py
tests/unit/core/: test_jim.py  test_prior.py
tests/unit/core/single_event/: test_data.py  test_likelihood.py
tests/unit/samplers/: test_base.py  test_config.py  test_flowmc.py
tests/unit/samplers/blackjax/: test_ns_aw.py  test_nss.py  test_smc.py
(+27 files in other folders)
